--- a/style.css
+++ b/style.css
@@ -5,3 +5,42 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
+
+/*-----------------
+Start of header section 
+----------------------*/
+.header-container{
+    background: rgb(255, 244, 231);
+    padding: 4rem 15rem 5rem 14rem;
+}
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 30px;
+}
+
+.navigation ul{
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+}
+
+.navigation ul li{
+    list-style: none;
+}
+
+.navigation ul li a{
+    text-decoration: none;
+    color: #3A3A3A;
+    font-size: 14px;
+    font-weight: 500;
+}
+/*-----------------
+End of header section 
+----------------------*/
