--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&family=Open+Sans:ital,wght@0,400;0,500;1,300;1,400;1,500&family=Poppins:wght@400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,300&family=Ubuntu:wght@400;500;700&family=Volkhov:ital,wght@0,700;1,400&family=Yeon+Sung&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&family=Open+Sans:ital,wght@0,400;0,500;1,300;1,400;1,500&family=Poppins:wght@400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,300&family=Ubuntu:wght@400;500;700&family=Volkhov:ital,wght@0,700;1,400&family=Work+Sans:wght@400;500;600;700&family=Yeon+Sung&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    font-family: 'work sans', sans-serif;
 }
 
 /*-----------------
@@ -11,7 +11,7 @@ Start of header section
 ----------------------*/
 .header-container{
     background: rgb(255, 244, 231);
-    padding: 4rem 15rem 5rem 14rem;
+    padding: 4rem 15rem 1.5rem 14rem;
 }
 .header{
     display: flex;
@@ -19,7 +19,7 @@ Start of header section
     justify-content: space-between;
 }
 
-.header-title{
+.logo-title{
     font-size: 1.5rem;
     font-weight: bold;
     line-height: 30px;
@@ -41,6 +41,107 @@ Start of header section
     font-size: 14px;
     font-weight: 500;
 }
+
+.banner-section{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.header-text{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 3rem;
+    margin-top: 5rem;
+}
+
+.header-title{
+    font-size: 4rem;
+    color: #131313;
+    font-weight: 700;
+    text-align: center;
+    font-family: 'work sans', sans-serif;
+    margin-bottom: 2rem;
+}
+.header-dec{
+    font-size: 1rem;
+    color: #727272;
+    font-weight: 400;
+    text-align: center;
+    font-family: 'work sans', sans-serif;
+    margin-bottom: 2rem;
+}
+
+.btn{
+    padding: 1.1rem 1.4rem;
+    background: #FF900E;
+    color: #fff;
+    border-radius: 10px;
+    border: none;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.header-img img{
+    width: 1080px;
+    height: 700;
+}
 /*-----------------
 End of header section 
+----------------------*/
+/*-----------------
+Start of feature section 
+----------------------*/
+.container{
+    padding: 4rem 15rem;
+}
+
+.features{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.feature-img-section{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.feature-img-section img{
+    width: 100%;
+}
+
+.feature-section-header{
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+}
+
+.gray{
+    color: #727272;
+}
+
+.black{
+    color: #000;
+}
+
+.orange{
+    color: #FF9E2C;
+}
+
+.feature-dec{
+    font-size: 1rem;
+    color: #727272;
+    font-weight: 400;
+    text-align: center;
+    font-family: 'work sans', sans-serif;
+    margin-bottom: 2rem;
+}
+/*-----------------
+End of feature section 
 ----------------------*/
