--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ Start of feature section
     color: #FF9E2C;
 }
 
-.feature-dec{
+.dec{
     font-size: 1rem;
     color: #727272;
     font-weight: 400;
@@ -145,3 +145,48 @@ Start of feature section
 /*-----------------
 End of feature section 
 ----------------------*/
+/*-----------------
+Start of Love and Enjoy section 
+----------------------*/
+
+.love_enjoy{
+    padding: 5rem 14rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 4rem;
+}
+
+.love_enjoy_img{
+    position: relative;
+}
+
+.love_enjoy_img .img-sec > img{
+    width: 100%;
+}
+
+
+.img-btn .btn-1{
+    position: absolute;
+    bottom: -5rem;
+    left: -5rem;
+    padding: 2rem 2rem;
+    border-radius: 0.6rem;
+    background: #FF900E;
+    color: #fff;
+    font-size: 4rem;
+    font-weight: 700;
+    border: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.img-btn .btn-1 > span{
+    font-size: 2.3rem;
+    font-weight: 500;
+    color: #fff;
+}
+
+
+
