--- a/style.css
+++ b/style.css
@@ -300,3 +300,6 @@ Start of Some facts section
     font-weight: 600;
     color: #727272;
 }
+/*-----------------
+Start of Some facts section 
+----------------------*/
