--- a/style.css
+++ b/style.css
@@ -301,11 +301,14 @@ Start of Some facts section
     color: #727272;
 }
 /*-----------------
-Start of Some facts section 
+End of Some facts section 
+----------------------*/
+/*-----------------
+Start of testimonial section 
 ----------------------*/
 
 .testimonial{
-    padding: 2rem 10rem;
+    padding: 2rem 10rem 5rem;
 }
 
 .testimonial_title{
@@ -316,3 +319,56 @@ Start of Some facts section
     font-family: 'work sans', sans-serif;
     margin-bottom: 2rem;
 }
+
+.testimonial-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+}
+
+.testimonial-col {
+    padding: 1.5rem;
+    margin: 0 0.7rem;
+    border-radius: 5px;
+    box-shadow: 0px 10px 20px 5px #00000014;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.testimonial-col p {
+    font-size: 0.82rem;
+    color: #727272;
+    font-weight: 400;
+    font-family: 'work sans', sans-serif;
+    margin-bottom: 2.5rem;
+    line-height: 1.2rem;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.user img {
+    width: 60px;
+    margin-right: 20px;
+    border-radius: 3px;
+    border-radius: 50%;
+}
+
+.user h4{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #3A3A3A;
+}
+
+.testimonial-col:hover {
+    transform: translateY(-7px);
+}
+
+/*-----------------
+End of testimonial section 
+----------------------*/
