--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ End of our footer Section
     .img-btn .btn-1 {
         position: absolute;
         bottom: -6rem;
-        left: 9rem;
+        left: 6rem;
         padding: 1.5rem 1.8rem;
         border-radius: 0.6rem;
         background: #FF900E;
@@ -538,7 +538,109 @@ End of our footer Section
         transition: 500ms ease-in-out;
     }
     .img-btn .btn-1 > span{
-        font-size: 0.3rem;
+        font-size: 0.6rem;
+        font-weight: 400;
+        color: #fff;
+    }
+    .facts_container{
+        padding: 3rem 2rem;
+    }
+    .icon_section{
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+    .testimonial{
+        padding: 2rem 2rem;
+    }
+    .testimonial-row{
+        flex-direction: column;
+    }
+    .Sponspors{
+        padding: 2rem 2rem 1rem;
+    }
+    .sponsor_img{
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+    .footer{
+        padding: 1rem 0;
+    }
+}
+
+@media only screen and (min-width:577px) and (max-width:1024px){
+    .hide{
+        display: none;
+    }
+    .header-container{
+        padding: 1rem 1rem 1rem 1rem;
+    }
+    .navigation ul{
+        flex-direction: column;
+        gap: 1rem;
+        background: #1fb4b1;
+        padding: 1rem 2rem;
+        border-radius: 10px;
+    }
+    .navigation ul li a{
+        color: #fff;
+    }
+    .header-img img{
+        width: 100%;
+    }
+    .features{
+        flex-direction: column;
+    }
+    .feature-img-section{
+        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 2rem;
+        margin-top: 2rem;
+    }
+    .container{
+        padding: 0;
+    }
+    .feature-img-section img{
+        width: 100%;
+    }
+    .love_enjoy{
+        padding: 6rem 2rem 7rem;
+        flex-direction: column;
+        justify-items: center;
+    }
+    .love_enjoy_info{
+        flex-basis: 100%;
+    }
+    
+    .love_enjoy_img{
+        flex-basis: 100%;
+    }
+    .love_enjoy_title::before {
+        position: absolute;
+        bottom: -1px;
+        left: -1.3rem;
+        content: "";
+        height: 6rem;
+        width: 5px;
+        background: #FF900E;
+    }
+    .img-btn .btn-1 {
+        position: absolute;
+        bottom: -6rem;
+        left: 16rem;
+        padding: 1.5rem 1.8rem;
+        border-radius: 0.6rem;
+        background: #FF900E;
+        color: #fff;
+        font-size: 1rem;
+        font-weight: 600;
+        border: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        transition: 500ms ease-in-out;
+    }
+    .img-btn .btn-1 > span{
+        font-size: 0.6rem;
         font-weight: 400;
         color: #fff;
     }
